# daqdb

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  Makefile  README.md  SConstruct  benchmark  config.spdk  daqdb.Doxyfile  fogkv.Doxyfile  neighbors.conf  zht.conf
apps/daqdb-top/: CMakeLists.txt  README.md  consumer.cpp  producer.cpp  utils.hpp
apps/daqdb-top/configs/: client.cfg  server.cfg
apps/minidaq/: CMakeLists.txt  Minidaq.cpp  MinidaqAroNode.cpp  MinidaqAroNode.h  MinidaqAsyncReadoutNode.cpp  MinidaqAsyncReadoutNode.h  MinidaqFfNode.cpp  MinidaqFfNode.h  MinidaqFfNodeSeq.cpp  MinidaqFfNodeSeq.h  MinidaqNode.cpp  MinidaqNode.h  MinidaqReadoutNode.cpp  MinidaqReadoutNode.h  MinidaqResults.cpp  MinidaqResults.h  MinidaqRoNode.cpp  MinidaqRoNode.h  MinidaqStats.cpp  MinidaqStats.h  MinidaqTimer.cpp  MinidaqTimer.h  MinidaqTimerHR.cpp  MinidaqTimerHR.h  minidaq.cfg.in  minidaq.cpp
apps/minidaq/scripts/: minidaq_set_affinity.sh
apps/mist/: CMakeLists.txt  config.cpp  config.h  config.hpp  makefile  mist.cfg  mist.cfg.in  mist.cpp
cmake/: BoostTestHelpers.cmake  CleanAll.cmake  FindConfig++.cmake  FindJsoncpp.cmake
doc/: directory_structure.md  getting_started.md  index.md  network_setup_guide.md  user_guides.md
doc/config/: config_4_15.txt
dragon-poc/: README.md
dragon-poc/src/: Makefile
examples/: SConscript
examples/basic/: CMakeLists.txt  SConscript  basic.cpp
examples/bench_node/: AuxNode.h  CpuMeter.cpp  CpuMeter.h  IoMeter.h  MainNode.cpp  MainNode.h  Node.cpp  Node.h  RingBuffer.cpp  SConscript  SimFogKV.cpp  SimFogKV.h  benchmark.cpp
examples/cli_node/: .gitignore  CMakeLists.txt  SConscript  debug.h  node.cpp  nodeCli.cpp  nodeCli.h
examples/clinode/: CMakeLists.txt  clinode.cfg.in  config.cpp  config.h  debug.h  node.cpp  nodeCli.cpp  nodeCli.h
examples/fabric_node/: .gitignore  CMakeLists.txt  SConscript  fabric_node.cpp
examples/node/: DragonSrv.cpp  SConscript  nodeCli.cpp  nodeCli.h
examples/spdk_example/: Makefile  SConscript  spdk_example.c
include/FogKV/: Info.h  KVBuff.h  KVPair.h  KVStore.h  KVStoreBase.h  Key.h  Options.h  Status.h  Types.h  Value.h
include/config/: Configuration.h  Configuration_DAQDB.h
include/daqdb/: Info.h  KVPair.h  KVStore.h  KVStoreBase.h  Key.h  Options.h  Status.h  Types.h  Value.h
include/db/: FogSrv.h  SocketReqManager.h
include/dht/: CChordNode.h  DhtNode.h  PureNode.h  ZhtNode.h
include/fabric/: Fabric.h  FabricAttributes.h  FabricConnection.h  FabricInfo.h  FabricMR.h  FabricNode.h  FabricRingBuffer.h
include/fogkv/: db.h
include/store/: KVInterface.h  KVStore.h  PmemKVStore.h
lib/: KVStore.cpp  KVStore.h  KVStoreBase.cpp  SConscript  libboost_filesystem.so.1.65.1  libboost_program_options.so.1.65.1  libboost_system.so.1.65.1  libboost_unit_test_framework.so.1.65.1
lib/common/: AllocStrategy.h  BlockingPoller.h  ClassAlloc.cpp  ClassAlloc.h  ClassMemoryAlloc.h  Configuration.cpp  DefaultAllocStrategy.cpp  DefaultAllocStrategy.h  GeneralPool.h  GeneralPoolBase.cpp  GeneralPoolBase.h  GeneralPoolBucket.cpp  GeneralPoolBucket.h  GeneralPoolBuffer.h  GlobalMemoryAlloc.h  Logger.cpp  Logger.h  MemMgr.cpp  MemMgr.h  Poller.h  PoolManager.cpp  PoolManager.h  Pooler.h  Rqst.h
lib/core/: Env.cpp  Env.h  KVStore.cpp  KVStore.h
lib/db/: FogSrv.cpp  SocketReqManager.cpp
lib/debug/: Logger.cpp  Logger.h
lib/dht/: CChordNode.cpp  CChordNode.h  DhtClient.cpp  DhtClient.h  DhtCore.cpp  DhtCore.h  DhtNode.cpp  DhtNode.h  DhtNodeInfo.h  DhtServer.cpp  DhtServer.h  DhtServerLoopback.cpp  DhtServerLoopback.h  DhtTypes.h  DhtUtils.cpp  DhtUtils.h  PureNode.cpp  SConscript  ZhtNode.cpp  ZhtNode.h
lib/fabric/: Fabric.cpp  Fabric.h  FabricAttributes.cpp  FabricConnection.cpp  FabricConnection.h  FabricInfo.cpp  FabricInfo.h  FabricMR.cpp  FabricMR.h  FabricNode.cpp  FabricNode.h  FabricRingBuffer.h  SConscript  common.h
lib/offload/: FinalizePoller.cpp  FinalizePoller.h  OffloadFreeList.cpp  OffloadFreeList.h  OffloadLbaAlloc.cpp  OffloadLbaAlloc.h  OffloadPoller.cpp  OffloadPoller.h  OffloadPooler.cpp  OffloadPooler.h  OffloadReactor.cpp  OffloadReactor.h  OffloadRqst.h  OffloadRqstPooler.cpp  OffloadRqstPooler.h  config-bdev.spdk  config-jbod.spdk  config-raid0.spdk  memleax.out.2
lib/pmem/: ARTree.cpp  ARTree.h  PmemPoller.cpp  PmemPoller.h  PmemPooler.cpp  PmemPooler.h  RTree.cpp  RTree.h  RTreeEngine.cpp  Rqst.h  (+3 more)
scripts/: autogen_isal.sh  libdpdk.mri  libspdk.mri  minidaq_run.sh  patch_spdk_isal.sh  pkgdep.sh  prepare_dpdk_libs.sh  prepare_spdk_libs.sh  setup_env_lcg.sh
src/: Makefile  SConscript
tests/: .gitignore  CMakeLists.txt  SConscript  SocketReqManagerTest.cpp  dragonTest.cpp  dragonTest.h  fogkvTest.cpp  fogkvTest.h
tests/dht/: CChordNodeTest.cpp  DhtUtilsTest.cpp
tests/fabric/: FabricNodeTest.cpp
tests/functional/: CMakeLists.txt  base_operations.cpp  base_operations.h  config.cpp  config.h  debug.h  functest.cfg.in  functests.cfg.in  functional.cpp  main.cpp  use_cases.cpp  use_cases.h
tests/functional/tests/: tests.h  tests_base.cpp  tests_dht.cpp  tests_offload.cpp  tests_offload_ext.cpp  tests_val_size.cpp
tests/functional/uc/: uc.h  uc_base.cpp  uc_dht_base.cpp  uc_offload.cpp
tests/functional_thin/: CMakeLists.txt  base_operations.cpp  base_operations.h  config.cpp  config.h  debug.h  functests_thin.cfg.in  functests_thin.sh  functests_thin_clinode.cfg.in  main.cpp
tests/functional_thin/tests/: common.cpp  common.h  tests.h  tests_base.cpp  tests_multithreading.cpp  tests_val_size.cpp
tests/mem/: MemLeaks.cpp
tests/offload/: OffloadFreeListTest.cpp  OffloadPoolerTest.cpp
tests/pmem/: RqstPoolerTest.cpp
tests/store/: OffloadFreeListTest.cpp  OffloadRqstPoolerTest.cpp  PmemKVTest.cpp  RqstPoolerTest.cpp
tests/unit/: CMakeLists.txt
tests/unit/common/: main.cpp
tests/unit/dht/: DhtClientTest.cpp  DhtCoreTest.cpp  DhtNodeTest.cpp  DhtUtilsTest.cpp
tests/unit/offload/: OffloadFreeListTest.cpp  OffloadPollerTest.cpp  OffloadPoolerTest.cpp
tests/unit/pmem/: PmemPollerTest.cpp  PmemPoolerTest.cpp  RqstPoolerTest.cpp
(+207 files in other folders)
